--- a/TEST-2/css/style.css
+++ b/TEST-2/css/style.css
@@ -102,16 +102,20 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    height: 80%;
   }
 
   .square {
-    width: 60px;
-    height: 60px;
+    width: 100px;
+    height: 100px;
     margin: 10px;
   }
 }
 
 @media screen and (max-width: 260px) {
+  body {
+    min-width: 150px;
+  }
   .header-div {
     margin: 5px 20px 5px 20px;
   }
@@ -138,15 +142,9 @@ body {
     height: 300px;
   }
 
-  .image-div {
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-  }
-
   .square {
-    height: 20px;
-    width: 20px;
+    height: 50px;
+    width: 50px;
     margin: auto;
   }
 
